fix: reduce big heading sizes on mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,12 +4,12 @@
 
 .headline,
 .heading-one {
-  @apply text-6xl font-semibold tracking-tight;
+  @apply text-5xl md:text-6xl font-semibold tracking-tight;
 }
 
 .heading-two,
 .markdown h2 {
-  @apply text-5xl font-semibold;
+  @apply text-4xl md:text-5xl font-semibold;
 }
 
 .heading-three,
